--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
             <version>8.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.faces</groupId>
@@ -66,6 +67,7 @@
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
             <version>1.5</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
